# FAMLab_2017_Thanh

./: CMakeLists.txt  FAMLab  FAMLab_2017.pro  Makefile  README.md  main.cpp  resources.qrc
MAELab/imageModel/: Edge.cpp  Edge.h  Image.cpp  Image.h  Line.cpp  Line.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h
MAELab/io/: JPEGReader.cpp  JPEGReader.h  PNGReader.cpp  PNGReader.h  Reader.cpp  Reader.h  TPSReader.cpp  TPSReader.h
MAELab/segmentation/: Canny.cpp  Canny.h  Filters.cpp  Filters.h  Suzuki.cpp  Suzuki.h  Thresholds.cpp  Thresholds.h
MAELab/utils/: Converter.cpp  Converter.h  ImageConvert.cpp  ImageConvert.h
matching/: MatchingAlgorithm.cpp  MatchingAlgorithm.h
segmentation/: RegionGrowing.cpp  RegionGrowing.h
ui/: FragmentItem.cpp  FragmentItem.h  ImageLabel.cpp  ImageLabel.h  ImageViewer.cpp  ImageViewer.h  SceneFragments.cpp  SceneFragments.h  WindowFragments.cpp  WindowFragments.h
